Wed Dec 20 21:32:40 2000  Brian Gough  <bjg@network-theory.co.uk>

	* vegas.c: tidied up the algorithm, deal with cases of sigma = 0
 	explicitly.

Sat Dec  9 14:19:53 2000  Brian Gough  <bjg@network-theory.co.uk>

	* reorganization and clean up

Thu Nov 16 19:50:27 2000  Brian Gough  <bjg@network-theory.co.uk>

	* miser.c: rewrite to fix overflows and make calling conventions
 	consistent 

	* plain.c: rewrite to fix overflows and make calling conventions
 	consistent

Thu Oct 26 20:06:36 2000  Brian Gough  <bjg@network-theory.co.uk>

	* plain.c (gsl_monte_plain_integrate): integer factor
 	calls*(calls-1) used in numerical expression can easily overflow,
 	changed to calls*(calls-1.0).
	
Sat Oct 21 20:36:06 2000  Brian Gough  <bjg@network-theory.co.uk>
 
        * miser.c (gsl_monte_miser_integrate): fixed bug where hits_l was
        used in place of hits_r

Tue Sep 19 19:16:37 2000  Brian Gough  <bjg@network-theory.co.uk>

	* plain.c (gsl_monte_plain_alloc): initialise check_done to avoid
 	warning about use of unitialised memory

	* vegas.c (gsl_monte_vegas_alloc): as above

	* miser.c (gsl_monte_miser_alloc): as above

	* plain.c miser.c: removed use of sprintf for error messages

Wed May 31 19:50:19 2000  Brian Gough  <bjg@network-theory.co.uk>

	* miser_test.c (main): increased tolerances to allow tests to pass
 	with different compilers

Mon May 15 15:26:22 2000  Brian Gough  <bjg@network-theory.co.uk>

	* vegas_test.c (main): added gsl_ieee_env_setup() to allow change
 	of precision in tests

	* miser_test.c (main): ditto

	* plain_test.c (main): ditto

Fri Feb 26 14:49:56 1999  Brian Gough  <bjg@netsci.freeserve.co.uk>

	* Makefile.am: removed ..._LDFLAGS = -static since this is
 	specific to gcc



Wed Nov 18 10:59:56 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* use standard headers templates_on.h and templates_off.h instead
 	of source.h

Tue Nov 17 16:49:12 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* added #include <config.h> to all top-level source files
